Completed javascript for viewfinder

--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
       <i class="fas fa-chevron-right"></i>
     </div>
     <ul>
-      <li class="col-7-left" id="header-name">STEF<span id="header-lc">anie</span>TAM</a></li>
+      <li id="header-name">STEF<span id="header-lc">anie</span>TAM</a></li>
       <!-- FOR SUBPAGES
       <li class="page-title"></li>-->
-      <li class="col-7-center header-project-title"></li>
-      <li class="col-7-right" id="header-information">INFORMATION <img src="img/face-01.png"></li>
+      <li id="header-information">INFORMATION <img src="img/face-01.png"></li>
     </ul>
   </header>
 
@@ -100,7 +99,7 @@
       <p class="project-statement">
         HTTP://OFPLACE.INFO/ is the result of an extensive surveillance collection of Google Maps satellite images. With choices dictated by randomization, pre-established rules, curiosity, and intuition, ://OFPLACE. archives 600 images of 20 different cities.
       </p>
-      <p>
+      <p class="project-statement">
         book: 6"x6"; website: <a href="http://ofplace.info">http://ofplace.info</a>
       </p>
     </div>
@@ -113,24 +112,25 @@
       </p>
     </div>
     <div class="project-image" id="image1-2">
-      <img src="https://via.placeholder.com/800x600.png" alt="From Waste to Change Ephemera">
+      <img src="img/2/2-1.png" alt="From Waste to Change Ephemera">
     </div>
     <div class="project-image" id="image2-2">
-      <img src="https://via.placeholder.com/800x600.png" alt="From Waste to Change Ephemera">
+      <img src="img/2/2-2.png" alt="From Waste to Change Ephemera">
     </div>
     <div class="project-image" id="image3-2">
-      <img src="https://via.placeholder.com/800x600.png" alt="From Waste to Change Ephemera">
+      <img src="img/2/2-3.gif" alt="From Waste to Change Ephemera">
     </div>
     <div class="project-image" id="image4-2">
-      <img src="https://via.placeholder.com/800x600.png" alt="From Waste to Change Ephemera">
+      <img src="img/2/2-4.gif" alt="From Waste to Change Ephemera">
     </div>
     <div class="project-image" id="image5-2">
-      <img src="https://via.placeholder.com/800x600.png" alt="From Waste to Change Ephemera">
+      <img src="img/2/2-5.gif" alt="From Waste to Change Ephemera">
     </div>
     <div class="project-image" id="image6-2">
       <p class="project-statement">
-        From Waste to Change is a designed activism and sustainability project containing two triptych poster series, a book documenting a week's worth of waste, and a sticker packet to record your changed wasteful habits.</p>
-      <p>
+        From Waste to Change is a designed activism and sustainability project containing two triptych poster series, a book documenting a week's worth of waste, and a sticker packet to record your changed wasteful habits.
+      </p>
+      <p class="project-statement" id="image6-2">
          book: 6"x9.5", 3"x4.25"; posters: 24"x36", 18"x24"
       </p>
     </div>
@@ -142,22 +142,22 @@
       </p>
     </div>
     <div class="project-image" id="image1-3">
-      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
+      <img src="img/3/3-1.png" alt="Poster">
     </div>
     <div class="project-image" id="image2-3">
-      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
+      <img src="img/3/3-2.png" alt="Poster">
     </div>
     <div class="project-image" id="image3-3">
-      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
+      <img src="img/3/3-3.png" alt="Poster">
     </div>
     <div class="project-image" id="image4-3">
-      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
+      <img src="img/3/3-4.png" alt="Poster">
     </div>
     <div class="project-image" id="image5-3">
-      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
+      <img src="img/3/3-5.png" alt="Poster">
     </div>
     <div class="project-image" id="image6-3">
-      <img src="https://via.placeholder.com/600x800.png" alt="Poster">
+      <img src="img/3/3-6.png" alt="Poster">
     </div>
     <div class="project-image" id="image7-3">
       <p class="project-statement">
@@ -175,19 +175,19 @@
       </p>
     </div>
     <div class="project-image" id="image1-4">
-      <img src="https://via.placeholder.com/600x600.png" alt="Design Collateral for World Arts and Culture Dance Department">
+      <img src="img/4/4-1.png" alt="Design Collateral for World Arts and Culture Dance Department">
     </div>
     <div class="project-image" id="image2-4">
-      <img src="https://via.placeholder.com/600x600.png" alt="Design Collateral for World Arts and Culture Dance Department">
+      <img src="img/4/4-2.png" alt="Design Collateral for World Arts and Culture Dance Department">
     </div>
     <div class="project-image" id="image3-4">
-      <img src="https://via.placeholder.com/600x600.png" alt="Design Collateral for World Arts and Culture Dance Department">
+      <img src="img/4/4-3.png" alt="Design Collateral for World Arts and Culture Dance Department">
     </div>
     <div class="project-image" id="image4-4">
       <p class="project-statement">
         Design Collateral for UCLA's World Arts and Culture Dance Department's Annual First Hand Dance concert.
       </p>
-      <p>
+      <p class="project-statement">
         20"x30", 8.5"x11", 2.5"x6"
       </p>
     </div>
@@ -304,12 +304,12 @@
       <h3 class="project-header-center">2</h3>
       <h3><a href="#" "nav-title-1">FROM WASTE TO CHANGE: SUSTAINABILITY & ACTIVISM</a></h3>
       <ul class="project-info-no">
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">ABC</a></li>
+        <li><a href="#" id="nav1-2">1</a></li>
+        <li><a href="#" id="nav2-2">2</a></li>
+        <li><a href="#" id="nav3-2">3</a></li>
+        <li><a href="#" id="nav4-2">4</a></li>
+        <li><a href="#" id="nav5-2">5</a></li>
+        <li><a href="#" id="navabc2">ABC</a></li>
       </ul>
     </div>
 
@@ -317,13 +317,13 @@
       <h3 class="project-header-center">3</h3>
       <h3 class="copy-padding"><a href="#" "nav-title-3">MISCELLANEOUS POSTERS II</a></h3>
       <ul class="project-info-no">
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">6</a></li>
-        <li><a href="#">ABC</a></li>
+        <li><a href="#" id="nav1-3">1</a></li>
+        <li><a href="#" id="nav2-3">2</a></li>
+        <li><a href="#" id="nav3-3">3</a></li>
+        <li><a href="#" id="nav4-3">4</a></li>
+        <li><a href="#" id="nav5-3">5</a></li>
+        <li><a href="#" id="nav6-3">6</a></li>
+        <li><a href="#" id="navabc3">ABC</a></li>
       </ul>
     </div>
 
@@ -331,10 +331,10 @@
       <h3 class="project-header-center">4</h3>
       <h3><a href="#" "nav-title-4">WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE</a></h3>
       <ul class="project-info-no">
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">ABC</a></li>
+        <li><a href="#" id="nav1-4">1</a></li>
+        <li><a href="#" id="nav2-4">2</a></li>
+        <li><a href="#" id="nav3-4">3</a></li>
+        <li><a href="#" id="navabc4">ABC</a></li>
       </ul>
     </div>
   </section>
