--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     </div>
 
     <!-- 01.0-->
-    <div class="project-image">
-      <p class="project-title-body"  id="title0-1">
-        HTTP://OFPLACE.INFO Book &amp; website.
-      </p>
-    </div>
+
+    <p class="project-title-body"  id="title0-1">
+      HTTP://OFPLACE.INFO Book &amp; website.
+    </p>
+
     <div class="project-image" id="image1-1">
       <img src="img/1/1-1.gif" alt="OfPlace Website">
     </div>
@@ -106,11 +106,11 @@
 
 
     <!-- 02.0-->
-    <div class="project-image">
-      <p class="project-title-body" id="image0-2">
-        From waste to change: Sustainability &amp; Activism
-      </p>
-    </div>
+
+    <p class="project-title-body" id="title0-2">
+      From waste to change: Sustainability &amp; Activism
+    </p>
+
     <div class="project-image" id="image1-2">
       <img src="img/2/2-1.png" alt="From Waste to Change Ephemera">
     </div>
@@ -136,11 +136,11 @@
     </div>
 
     <!-- 03.0-->
-    <div class="project-image" id="image0-3">
-      <p class="project-title-body">
-        Miscellaneous Posters II
-      </p>
-    </div>
+
+    <p class="project-title-body" id="title0-3">
+      Miscellaneous Posters II
+    </p>
+
     <div class="project-image" id="image1-3">
       <img src="img/3/3-1.png" alt="Poster">
     </div>
@@ -169,11 +169,11 @@
     </div>
 
     <!-- 04.0-->
-    <div class="project-image" id="image0-4">
-      <p class="project-title-body">
-        WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE
-      </p>
-    </div>
+
+    <p class="project-title-body" id="title0-4">
+      WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE
+    </p>
+
     <div class="project-image" id="image1-4">
       <img src="img/4/4-1.png" alt="Design Collateral for World Arts and Culture Dance Department">
     </div>
@@ -302,7 +302,7 @@
 
     <div class="project-info" id="project-info-2">
       <h3 class="project-header-center">2</h3>
-      <h3><a href="#" "nav-title-1">FROM WASTE TO CHANGE: SUSTAINABILITY & ACTIVISM</a></h3>
+      <h3><a href="#" class="project-title-lg" id="nav-title-2">FROM WASTE TO CHANGE: SUSTAINABILITY & ACTIVISM</a></h3>
       <ul class="project-info-no">
         <li><a href="#" id="nav1-2">1</a></li>
         <li><a href="#" id="nav2-2">2</a></li>
@@ -315,7 +315,7 @@
 
     <div class="project-info" id="project-info-3">
       <h3 class="project-header-center">3</h3>
-      <h3 class="copy-padding"><a href="#" "nav-title-3">MISCELLANEOUS POSTERS II</a></h3>
+      <h3 class="copy-padding"><a href="#" class="project-title-lg" id="nav-title-3">MISCELLANEOUS POSTERS II</a></h3>
       <ul class="project-info-no">
         <li><a href="#" id="nav1-3">1</a></li>
         <li><a href="#" id="nav2-3">2</a></li>
@@ -329,7 +329,7 @@
 
     <div class="project-info" id="project-info-4">
       <h3 class="project-header-center">4</h3>
-      <h3><a href="#" "nav-title-4">WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE</a></h3>
+      <h3><a href="#" class="project-title-lg" id="nav-title-4">WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE</a></h3>
       <ul class="project-info-no">
         <li><a href="#" id="nav1-4">1</a></li>
         <li><a href="#" id="nav2-4">2</a></li>
