Added PDF and consolidated and validated code

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <i class="fas fa-chevron-right"></i>
     </div>
     <ul>
-      <li id="header-name">STEF<span id="header-lc">anie</span>TAM</a></li>
+      <li id="header-name">STEF<span id="header-lc">anie</span>TAM</li>
       <!-- FOR SUBPAGES
       <li class="page-title"></li>-->
       <li id="header-information">INFORMATION <img src="img/face-01.png"></li>
@@ -53,6 +53,9 @@
     <div class="project-acro" id="acro4">
       <p>WACDFH</p>
     </div>
+    <div class="project-acro" id="acro5">
+      <p>TPMM7</p>
+    </div>
   </section>
 
     <!--Project images and statements-->
@@ -67,7 +70,7 @@
 
     <div class="header-info" id="information-hover">
       <p class="header-info-copy">
-        <a href="#">email</a> — <a href="#">cv</a> — <a href="#">are.na</a> — <a href="#">ig</a>
+        <a href="mailto:stefanietam97@gmail.com">email</a> — <a href="img/CV_StefanieTam.pdf" target="_blank">cv</a> — <a href="https://www.are.na/stefanie-tam" target="_blank">are.na</a> — <a href="https://www.instagram.com/stefanie.tm/" target="_blank">ig</a>
       </p>
       <p class="header-info-copy">
         updated: 10.10.18
@@ -192,6 +195,33 @@
       </p>
     </div>
 
+    <!-- 05.0-->
+
+    <p class="project-title-body" id="title0-5">
+      The paper mixtape magazine VII
+    </p>
+
+    <div class="project-image" id="image1-5">
+      <img src="img/5/5-1.png" alt="Design Collateral for World Arts and Culture Dance Department">
+    </div>
+    <div class="project-image" id="image2-5">
+      <img src="img/5/5-2.png" alt="Design Collateral for World Arts and Culture Dance Department">
+    </div>
+    <div class="project-image" id="image3-5">
+      <img src="img/5/5-3.png" alt="Design Collateral for World Arts and Culture Dance Department">
+    </div>
+    <div class="project-image" id="image4-5">
+      <img src="img/5/5-4.png" alt="Design Collateral for World Arts and Culture Dance Department">
+    </div>
+    <div class="project-image" id="image5-5">
+      <p class="project-statement">
+        TPM MAG Issue 7 select spreads. Front/Back cover design by TPM Design&nbsp;Director,&nbsp;Sophia&nbsp;Arriola. Features photos, artwork, and words by Ciara Mandich, Jade McKenzie, Max Huang, Joyce Ding, Lisa Aubry, and Marion Moseley.
+      </p>
+      <p class="project-statement">
+        8"x10"
+      </p>
+    </div>
+
     <!--Slide numnbers-->
     <!-- 01.0-->
     <div class="slide-numbers-vf">
@@ -283,13 +313,34 @@
         <p>04.ABC</p>
       </div>
     </div>
+
+    <!--5.0-->
+    <div class="project-slide-no" id="slide0-5">
+      <p>05.0</p>
+    </div>
+    <div class="project-slide-no" id="slide1-5">
+      <p>05.1</p>
+    </div>
+    <div class="project-slide-no" id="slide2-5">
+      <p>05.2</p>
+    </div>
+    <div class="project-slide-no" id="slide3-5">
+      <p>05.3</p>
+    </div>
+    <div class="project-slide-no" id="slide4-5">
+      <p>05.4</p>
+    </div>
+    <div class="project-slide-no" id="slide5-abc4">
+      <p>05.ABC</p>
+    </div>
+  </div>
   </div>
   <!--END CONTAINER-->
 
   <section class="project-nav">
     <div class="project-info" id="project-info-1">
       <h3 class="project-header-center">1</h3>
-      <h3><a href="#"  class="project-title-lg" id="nav-title-1">HTTP://OFPLACE.INFO book &amp; website</a></h3>
+      <h3><a href="http://stefanietam.com/::OP.I.html"  class="project-title-lg" id="nav-title-1" target="_blank">HTTP://OFPLACE.INFO book &amp; website</a></h3>
       <ul class="project-info-no">
         <li><a href="#" id="nav1-1">1</a></li>
         <li><a href="#" id="nav2-1">2</a></li>
@@ -302,7 +353,7 @@
 
     <div class="project-info" id="project-info-2">
       <h3 class="project-header-center">2</h3>
-      <h3><a href="#" class="project-title-lg" id="nav-title-2">FROM WASTE TO CHANGE: SUSTAINABILITY & ACTIVISM</a></h3>
+      <h3><a href="http://stefanietam.com/FWTC.html" class="project-title-lg" id="nav-title-2" target="_blank">FROM WASTE TO CHANGE: SUSTAINABILITY & ACTIVISM</a></h3>
       <ul class="project-info-no">
         <li><a href="#" id="nav1-2">1</a></li>
         <li><a href="#" id="nav2-2">2</a></li>
@@ -315,7 +366,7 @@
 
     <div class="project-info" id="project-info-3">
       <h3 class="project-header-center">3</h3>
-      <h3 class="copy-padding"><a href="#" class="project-title-lg" id="nav-title-3">MISCELLANEOUS POSTERS II</a></h3>
+      <h3 class="copy-padding"><a href="http://stefanietam.com/MP2.html" class="project-title-lg" id="nav-title-3" target="_blank">MISCELLANEOUS POSTERS II</a></h3>
       <ul class="project-info-no">
         <li><a href="#" id="nav1-3">1</a></li>
         <li><a href="#" id="nav2-3">2</a></li>
@@ -329,7 +380,7 @@
 
     <div class="project-info" id="project-info-4">
       <h3 class="project-header-center">4</h3>
-      <h3><a href="#" class="project-title-lg" id="nav-title-4">WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE</a></h3>
+      <h3><a href="http://stefanietam.com/WACDFH.html" class="project-title-lg" id="nav-title-4" target="_blank">WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE</a></h3>
       <ul class="project-info-no">
         <li><a href="#" id="nav1-4">1</a></li>
         <li><a href="#" id="nav2-4">2</a></li>
@@ -337,6 +388,18 @@
         <li><a href="#" id="navabc4">ABC</a></li>
       </ul>
     </div>
+    <!--
+    <div class="project-info" id="project-info-5">
+      <h3 class="project-header-center">4</h3>
+      <h3><a href="#" class="project-title-lg" id="nav-title-5">WORLD ARTS AND CULTURES DANCE: FIRST HAND DANCE</a></h3>
+      <ul class="project-info-no">
+        <li><a href="#" id="nav1-4">1</a></li>
+        <li><a href="#" id="nav2-4">2</a></li>
+        <li><a href="#" id="nav3-4">3</a></li>
+        <li><a href="#" id="nav3-4">4</a></li>
+        <li><a href="#" id="navabc5">ABC</a></li>
+      </ul>
+    </div> -->
   </section>
 
   <!--[if lte IE 9]>
