Cleaned up code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -33,14 +33,14 @@
       <li id="header-name">STEF<span id="header-lc">anie</span>TAM</li>
       <!-- FOR SUBPAGES
       <li class="page-title"></li>-->
-      <li id="header-information">INFORMATION <img src="img/face-01.png"></li>
+      <li id="header-information">INFORMATION <img src="img/face-01.png" alt="Drawn face sticking tongue out"></li>
     </ul>
   </header>
 
   <div class="view-finder">
 
   <!--Project Titles-->
-  <section class="accro-section">
+  <div class="accro-section">
     <div class="project-acro" id="acro1">
       <p>://OP.I</p>
     </div>
@@ -56,7 +56,7 @@
     <div class="project-acro" id="acro5">
       <p>TPMM7</p>
     </div>
-  </section>
+  </div>
 
     <!--Project images and statements-->
     <div class="header-info" id="name-hover">
@@ -101,12 +101,11 @@
     <div class="project-image" id="image6-1">
       <p class="project-statement">
         HTTP://OFPLACE.INFO/ is the result of an extensive surveillance collection of Google Maps satellite images. With choices dictated by randomization, pre-established rules, curiosity, and intuition, ://OFPLACE. archives 600 images of 20 different cities.
-      </p>
-      <p class="project-statement">
+        <br>
+        <br>
         book: 6"x6"; website: <a href="http://ofplace.info">http://ofplace.info</a>
       </p>
     </div>
-
 
     <!-- 02.0-->
 
@@ -132,8 +131,8 @@
     <div class="project-image" id="image6-2">
       <p class="project-statement">
         From Waste to Change is a designed activism and sustainability project containing two triptych poster series, a book documenting a week's worth of waste, and a sticker packet to record your changed wasteful habits.
-      </p>
-      <p class="project-statement" id="image6-2">
+      <br>
+      <br>
          book: 6"x9.5", 3"x4.25"; posters: 24"x36", 18"x24"
       </p>
     </div>
@@ -165,8 +164,8 @@
     <div class="project-image" id="image7-3">
       <p class="project-statement">
         Ephemeral explorations of type, color, and composition.
-      </p>
-      <p class="project-statement">
+      <br>
+      <br>
         11"x17"
       </p>
     </div>
@@ -189,8 +188,8 @@
     <div class="project-image" id="image4-4">
       <p class="project-statement">
         Design Collateral for UCLA's World Arts and Culture Dance Department's Annual First Hand Dance concert.
-      </p>
-      <p class="project-statement">
+      <br>
+      <br>
         20"x30", 8.5"x11", 2.5"x6"
       </p>
     </div>
@@ -216,8 +215,8 @@
     <div class="project-image" id="image5-5">
       <p class="project-statement">
         TPM MAG Issue 7 select spreads. Front/Back cover design by TPM Design&nbsp;Director,&nbsp;Sophia&nbsp;Arriola. Features photos, artwork, and words by Ciara Mandich, Jade McKenzie, Max Huang, Joyce Ding, Lisa Aubry, and Marion Moseley.
-      </p>
-      <p class="project-statement">
+      <br>
+      <br>
         8"x10"
       </p>
     </div>
@@ -334,7 +333,6 @@
       <p>05.ABC</p>
     </div>
   </div>
-  </div>
   <!--END CONTAINER-->
 
   <section class="project-nav">
@@ -402,10 +400,10 @@
     </div> -->
   </section>
 
-  <!--[if lte IE 9]>
+  <!--[if lte IE 9]>-->
   <!--[if lte IE 9]\
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
+  [endif]-->
 
   <!-- Add your site or application content here -->
 
